2007-04-26  Patrick Mansfield <patmans@us.ibm.com>

	* libc/include/ieeefp.h: use prefixed __ieeefp_ macros that can be
	overridden via machine/ieeefp.h.
	* libc/include/machine/ieeefp.h: Add SPU specific C99 and ieeefp
	macros for isnan and related macros.
	* libc/include/math.h: Allow C99 isfinite, isinf, and isnan to be
	overridden via machine/ieeefp.h.
	* libm/machine/spu/Makefile.am: Add new files.
	* libm/machine/spu/Makefile.in: Autogenerate with new files.
	* libm/machine/spu/sf_fpclassify.c: Add SPU specific __fpclassifyf.
	* libm/machine/spu/sf_finite.c: Add SPU specific finitef.
	* libm/machine/spu/sf_isinf.c: Add SPU specific isinff.
	* libm/machine/spu/sf_isinff.c: Add SPU specific __isinff.
	* libm/machine/spu/sf_isnan.c: Add SPU specific isnanf.
	* libm/machine/spu/sf_isnanf.c: Add SPU specific __isnanf.
	* libm/machine/spu/sf_nan.c: Add SPU specific nanf.

2007-04-25  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/common/s_fpclassify.c (__fpclassifyf): Move this to...
	* libm/common/sf_fpclassify.c: ...here.  New file.
	* libm/common/Makefile.am: Add sf_fpclassify.c.
	* libm/common/Makefile.in: Regenerated.

2007-04-25  Patrick Mansfield <patmans@us.ibm.com>

	* libc/machine/spu/sys/errno.h: New file, so spu errno values match
	ppu linux values. This file is a copy of the cris/sys/errno.h plus
	a few changes (see spu errno.h comments).

2007-04-25  Eric Blake  <ebb9@byu.net>

	* libc/stdio/vfprintf.c (get_arg): Support %1$lc.  Simplify types
	that promote to int.

2007-04-25  Patrick Mansfield <patmans@us.ibm.com>

	* libm/machine/spu/headers/feholdexcept.h: Use *envp not env so 
	we clear the proper bits in the fpscr, and don't set some random ones.

2007-04-24  Eric Blake  <ebb9@byu.net>

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Don't zero pad on infinity
	or NaN with %05f.

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Avoid multibyte when not
	_MB_CAPABLE.

	* libc/include/limits.h (NL_ARGMAX): Define a default value.