@@ -1,3 +1,10 @@
+2007-04-27  Kazu Hirata  <kazu@codesourcery.com>
+
+	* libc/machine/m68k/Makefile.am (lib_a_SOURCES): Add memcpy.S
+	and memset.S.
+	* libc/machine/m68k/Makefile.in: Regenerate.
+	* libc/machine/m68k/memcpy.S, libc/machine/m68k/memset.S: New.
+
 2007-04-26  Patrick Mansfield <patmans@us.ibm.com>
 
 	* libc/include/ieeefp.h: use prefixed __ieeefp_ macros that can be
